--- a/styles/point.blurp.right.module.scss
+++ b/styles/point.blurp.right.module.scss
@@ -8,7 +8,7 @@
     padding: 0px 40px 0px 80px;
     margin: 0px 0px 0px 0px;
     position: relative;
-    min-height: 87px;
+    min-height: 68px;
     @media (min-width: $breakpoint) {
         align-items: flex-end;
         padding: 0px 40px 0px 120px;
